# pathogems-sandbox

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  brief.md  environment.yml
.github/workflows/: ci.yml
docs/decisions/: 0001-omics-only-first-baseline.md  0002-cox-partial-likelihood-loss.md  0003-cbioportal-data-source.md  0004-5fold-cv-harness.md  0005-run-log-schema.md  0006-linear-cox-reference-baseline.md  0007-full-batch-cox-training.md  0008-mlflow-experiment-tracking.md  0009-reproducibility-stance.md  README.md
stage2_data/: README.md  explore_brca.py  fetch_cbioportal_brca.py
stage3_experiments/: HOW_TO_RUN.md  pyproject.toml
stage3_experiments/configs/: base.yaml  brca_gene_attention.json  brca_linear_cox_baseline.json  brca_omics_adamw.json  brca_omics_baseline.json  brca_omics_cosine_lr.json  brca_omics_cosine_warmup.json  brca_omics_cox_lasso.json  brca_omics_cox_selection.json  brca_omics_deep.json  brca_omics_dropout01.json  brca_omics_elastic_net.json  brca_omics_gelu.json  brca_omics_l1.json  brca_omics_patience20.json  brca_omics_swa.json  brca_omics_topk1000.json  brca_omics_topk1000_wider.json  brca_omics_topk2000.json  brca_pathway_mlp.json  brca_pathway_mlp_kegg.json  brca_pathway_mlp_kegg_filtered.json  brca_pathway_mlp_kegg_layernorm.json  brca_pathway_mlp_kegg_residual.json  brca_pathway_mlp_kegg_scaled_init.json  brca_pathway_mlp_topk3000.json
stage3_experiments/configs/experiment/: brca_gene_attention.yaml  brca_linear_cox_baseline.yaml  brca_omics_adamw.yaml  brca_omics_baseline.yaml  brca_omics_cosine_lr.yaml  brca_omics_cosine_warmup.yaml  brca_omics_cox_lasso.yaml  brca_omics_cox_selection.yaml  brca_omics_deep.yaml  brca_omics_dropout01.yaml  brca_omics_elastic_net.yaml  brca_omics_gelu.yaml  brca_omics_l1.yaml  brca_omics_patience20.yaml  brca_omics_swa.yaml  brca_omics_topk1000.yaml  brca_omics_topk1000_wider.yaml  brca_omics_topk2000.yaml  brca_pathway_mlp.yaml  brca_pathway_mlp_kegg.yaml  brca_pathway_mlp_kegg_filtered.yaml  brca_pathway_mlp_kegg_layernorm.yaml  brca_pathway_mlp_kegg_residual.yaml  brca_pathway_mlp_kegg_scaled_init.yaml  brca_pathway_mlp_topk3000.yaml
stage3_experiments/logs/: brca_omics_adamw_run.json  brca_omics_baseline_run.json  brca_omics_cosine_lr_run.json  brca_omics_cosine_warmup_run.json  brca_omics_cox_lasso_run.json  brca_omics_cox_selection_run.json  brca_omics_deep_run.json  brca_omics_dropout01_run.json  brca_omics_elastic_net_run.json  brca_omics_gelu_run.json  brca_omics_l1_run.json  brca_omics_patience20_run.json  brca_omics_swa_run.json  brca_omics_topk1000_run.json  brca_omics_topk1000_wider_run.json  brca_omics_topk2000_run.json  brca_pathway_mlp_kegg_filtered_run.json  brca_pathway_mlp_kegg_layernorm_run.json  brca_pathway_mlp_kegg_residual_run.json  brca_pathway_mlp_kegg_run.json  brca_pathway_mlp_kegg_scaled_init_run.json  brca_pathway_mlp_run.json  brca_pathway_mlp_topk3000_run.json
stage3_experiments/reports/: experiment_report.html
stage3_experiments/schemas/: run_log_v1.json
stage3_experiments/scripts/: check_dep_pins.py  experiment_report.py  kaggle_bridge.py
stage3_experiments/src/pathogems/: __init__.py  cli.py  config.py  data.py  loss.py  metrics.py  model.py  optimizers.py  pathways.py  registry.py  run_log.py  tracking.py  train.py
stage3_experiments/src/pathogems/models/: __init__.py  _mixin.py  _registry.py  gene_attention.py  linear_cox.py  omics_mlp.py  pathway_mlp.py
stage3_experiments/tests/: conftest.py  test_cli.py  test_config.py  test_data.py  test_loss.py  test_metrics.py  test_model.py  test_pathways.py  test_registry.py  test_run_log.py  test_smoke_end_to_end.py  test_tracking.py  test_train_edge_cases.py  test_train_features.py
