# Build + tool config for the Stage 3 `pathogems` package.
#
# The package lives under `src/pathogems` (src-layout) so that imports only
# resolve after `pip install -e .` — this prevents accidental imports that
# depend on cwd and catches missing-package bugs early.

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pathogems"
version = "0.1.0"
description = "Stage 3 experiment harness for multimodal cancer survival prediction."
requires-python = ">=3.11"
authors = [{ name = "Austin Shin", email = "shinaushin@gmail.com" }]
# Runtime deps are managed by conda (see environment.yml). We only list here
# what is strictly needed for `pip install -e .` to succeed on a minimal env —
# the rest are asserted via imports and tested in CI / local runs.
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scikit-learn>=1.4",
  "torch>=2.2",
  "scikit-survival>=0.22",
]

[project.scripts]
# `pathogems-train` becomes available on PATH after `pip install -e .`
pathogems-train = "pathogems.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
xfail_strict = true
markers = [
  # `slow` covers anything that trains a real model end-to-end. Use
  # `pytest -m "not slow"` for the fast inner loop.
  "slow: end-to-end tests that train a real model (>1s).",
]
filterwarnings = [
  # Surface warnings as errors so we catch deprecations in our own code.
  "error",
  # But let known third-party deprecations through.
  "ignore::DeprecationWarning:pkg_resources",
]

# ---------------------------------------------------------------------------
# mypy — strict enough to catch real bugs, loose enough to not block research.
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
# Two strict-mode settings relaxed for an ML research codebase:
# - disallow_any_generics: numpy's ndarray is generic but annotating
#   ndarray[Any, dtype[Any]] everywhere is noise with no type-safety gain.
# - warn_return_any: torch/numpy ops are typed as returning Any in partial
#   stubs; requiring cast() on every arithmetic result blocks development.
disallow_any_generics = false
warn_return_any = false
# Third-party libs without complete stubs. Even when running mypy inside
# the conda env, torch/sklearn/mlflow ship only partial or no stubs.
# Silencing import errors for these lets us keep strict mode for our own
# code without drowning in third-party noise.
[[tool.mypy.overrides]]
module = [
  "sksurv.*",
  "lifelines.*",
  "torch.*",
  "sklearn.*",
  "mlflow.*",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# ruff — lint + format. Keeps diffs clean across commits.
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E", "F", "W",   # pycodestyle / pyflakes
  "I",             # isort
  "B",             # bugbear
  "UP",            # pyupgrade
  "N",             # pep8-naming
  "D",             # pydocstyle
  "RUF",           # ruff-specific
]
ignore = [
  "D100",  # Missing docstring in public module (tests, etc.)
  "D104",  # Missing docstring in public package
  "D203",  # one-blank-line-before-class (conflicts with D211)
  "D213",  # multi-line-summary-second-line (conflicts with D212)
]

[tool.ruff.lint.pydocstyle]
convention = "google"
